--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-pandas==1.3.5
-scikit-learn==1.0.2
-imabalanced-lear==0.9.0
-streamlit>=1.12.0
-joblib>=0.11,<=1.0.1
+pandas==2.2.3
+plotly==5.24.1
+requests==2.32.3
